use fixed position to prevent bottom overflowing

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,11 +5,14 @@ body {
 }
 
 #app {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 0;
   font-weight: normal;
-  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   overflow: scroll;
 }
 
@@ -55,7 +58,7 @@ header {
 }
 .fade-enter-active,
 .fade-leave-active {
-  transition: opacity 0.5s ease;
+  transition: opacity 0.25s ease;
 }
 .fade-enter-from,
 .fade-leave-to {
